functies vervangen door die van de modeloplossing in leafshapegroup en nonleafshapegroup